--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web to Lead form</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
   <body>
     <h1>Create Lead</h1>
@@ -21,6 +22,11 @@
         value="https://yashkhemani101.github.io/web_to_lead/thanks.html"
       />
       <input type="hidden" name="Lead_Date__c" class="outputDate" />
+      <input
+        type="hidden"
+        name="captcha_settings"
+        value='{"keyname":"WebToLeadProject","fallback":"true","orgId":"00DgL000006l86j","ts":""}'
+      />
 
       <label for="first_name">First Name</label
       ><input
@@ -62,6 +68,13 @@
 
       <label for="date">Lead Date</label>
       <input type="date" class="inputDate" required="true" />
+      <br />
+
+      <div
+        class="g-recaptcha"
+        data-sitekey="6Lfh9t0rAAAAAOE_buQA86CpsbMkCX1oQZDWJhD7"
+        required = "true"
+      ></div>
       <br />
 
       <input type="submit" name="submit" class="submit" />
