--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div
         class="g-recaptcha"
         data-sitekey="6Lfh9t0rAAAAAOE_buQA86CpsbMkCX1oQZDWJhD7"
-        required = "true"
+        data-callback="captchaChecked = true"
       ></div>
       <br />
 
