--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form
       action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DgL000006l86j"
       method="POST"
-      onsubmit="beforeSubmit()"
+      onsubmit="beforeSubmit(event)"
     >
       <input type="hidden" name="oid" value="00DgL000006l86j" />
       <input
