--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input
         type="hidden"
         name="retURL"
-        value="https://yashkhemani101.github.io/web_to_lead/thanks.html"
+        value="https://yashkhemani101.github.io/web_to_lead/thanks"
       />
       <input type="hidden" name="Lead_Date__c" class="outputDate" />
       <input
